{
  "version": 4,
  "terraform_version": "0.13.4",
  "serial": 56,
  "lineage": "5bb254fc-18e1-073a-bd29-81e51ff95bd6",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_backend_service",
      "name": "BACKEND_SERVICE",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/websites-270319/zones/us-central1-b/instanceGroups/unmanaged-us-central1",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0.8
              }
            ],
            "cdn_policy": [
              {
                "cache_key_policy": [
                  {
                    "include_host": true,
                    "include_protocol": true,
                    "include_query_string": true
                  }
                ],
                "cache_mode": "CACHE_ALL_STATIC",
                "client_ttl": 3600,
                "default_ttl": 3600,
                "max_ttl": 86400,
                "negative_caching": true,
                "serve_while_stale": 0,
                "signed_url_cache_max_age_sec": 0
              }
            ],
            "connection_draining_timeout_sec": 300,
            "creation_timestamp": "2021-05-12T01:35:28.248-07:00",
            "custom_request_headers": [
              "X-Client-Region: {client_region}",
              "X-Forwarded-Proto: https"
            ],
            "custom_response_headers": [
              "X-Cache-Hit: {cdn_cache_status}"
            ],
            "enable_cdn": false,
            "fingerprint": "oCHQvz5phK8=",
            "health_checks": [
              "https://www.googleapis.com/compute/v1/projects/websites-270319/global/healthChecks/nginx-80"
            ],
            "id": "projects/websites-270319/global/backendServices/backend-service",
            "load_balancing_scheme": "EXTERNAL",
            "name": "backend-service",
            "port_name": "http",
            "project": "websites-270319",
            "protocol": "HTTP",
            "self_link": "https://www.googleapis.com/compute/v1/projects/websites-270319/global/backendServices/backend-service",
            "session_affinity": "NONE",
            "timeout_sec": 30
          },
          "dependencies": [
            "google_compute_health_check.HTTP_CHECK_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "EXTERNAL_L7LB_IP_ADDRESS",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "35.201.70.114",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2021-05-12T00:59:08.143-07:00",
            "id": "projects/websites-270319/global/addresses/external-http-https-load-balancer",
            "name": "external-http-https-load-balancer",
            "prefix_length": 0,
            "project": "websites-270319",
            "self_link": "https://www.googleapis.com/compute/v1/projects/websites-270319/global/addresses/external-http-https-load-balancer"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "FWD_RULE_HTTP",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "projects/websites-270319/global/forwardingRules/frontend-http",
            "ip_address": "35.201.70.114",
            "ip_protocol": "TCP",
            "load_balancing_scheme": "EXTERNAL",
            "name": "frontend-http",
            "port_range": "80-80",
            "project": "websites-270319",
            "self_link": "https://www.googleapis.com/compute/v1/projects/websites-270319/global/forwardingRules/frontend-http",
            "target": "https://www.googleapis.com/compute/v1/projects/websites-270319/global/targetHttpProxies/target-proxy-http"
          },
          "dependencies": [
            "google_compute_backend_bucket.BACKEND_BUCKET",
            "google_compute_global_address.EXTERNAL_L7LB_IP_ADDRESS",
            "google_compute_target_http_proxy.TPROXY_HTTP",
            "google_compute_url_map.URL_MAP_HTTP"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "FWD_RULE_HTTPS",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "projects/websites-270319/global/forwardingRules/frontend-https",
            "ip_address": "35.201.70.114",
            "ip_protocol": "TCP",
            "load_balancing_scheme": "EXTERNAL",
            "name": "frontend-https",
            "port_range": "443-443",
            "project": "websites-270319",
            "self_link": "https://www.googleapis.com/compute/v1/projects/websites-270319/global/forwardingRules/frontend-https",
            "target": "https://www.googleapis.com/compute/v1/projects/websites-270319/global/targetHttpsProxies/target-proxy-https"
          },
          "dependencies": [
            "google_compute_global_address.EXTERNAL_L7LB_IP_ADDRESS",
            "google_compute_ssl_certificate.SSL_CERT",
            "google_compute_target_https_proxy.TPROXY_HTTPS",
            "google_compute_url_map.URL_MAP_HTTPS"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_target_http_proxy",
      "name": "TPROXY_HTTP",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2021-05-12T01:35:39.852-07:00",
            "id": "projects/websites-270319/global/targetHttpProxies/target-proxy-http",
            "name": "target-proxy-http",
            "project": "websites-270319",
            "proxy_bind": false,
            "proxy_id": 8696181967151312308,
            "self_link": "https://www.googleapis.com/compute/v1/projects/websites-270319/global/targetHttpProxies/target-proxy-http",
            "url_map": "https://www.googleapis.com/compute/v1/projects/websites-270319/global/urlMaps/urlmap-http"
          },
          "dependencies": [
            "google_compute_backend_bucket.BACKEND_BUCKET",
            "google_compute_url_map.URL_MAP_HTTP"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_target_https_proxy",
      "name": "TPROXY_HTTPS",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2021-05-12T01:37:41.769-07:00",
            "id": "projects/websites-270319/global/targetHttpsProxies/target-proxy-https",
            "name": "target-proxy-https",
            "project": "websites-270319",
            "proxy_bind": false,
            "proxy_id": 2662770016066612538,
            "quic_override": "NONE",
            "self_link": "https://www.googleapis.com/compute/v1/projects/websites-270319/global/targetHttpsProxies/target-proxy-https",
            "ssl_certificates": [
              "https://www.googleapis.com/compute/v1/projects/websites-270319/global/sslCertificates/www-dudewheresmydns-com",
              "https://www.googleapis.com/compute/v1/projects/websites-270319/global/sslCertificates/python-j5-org"
            ],
            "ssl_policy": "https://www.googleapis.com/compute/v1/projects/websites-270319/global/sslPolicies/custom-ssl-policy",
            "url_map": "https://www.googleapis.com/compute/v1/projects/websites-270319/global/urlMaps/urlmap-https"
          },
          "dependencies": [
            "google_compute_ssl_certificate.SSL_CERT",
            "google_compute_url_map.URL_MAP_HTTPS"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "URL_MAP_HTTP",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2021-05-12T01:35:28.295-07:00",
            "default_route_action": [],
            "default_service": "https://www.googleapis.com/compute/v1/projects/websites-270319/global/backendBuckets/backend-bucket-j5-org",
            "default_url_redirect": [],
            "description": "",
            "fingerprint": "I-itBFcn454=",
            "header_action": [],
            "host_rule": [
              {
                "description": "",
                "hosts": [
                  "*"
                ],
                "path_matcher": "all-hosts"
              }
            ],
            "id": "projects/websites-270319/global/urlMaps/urlmap-http",
            "map_id": 1121329673988877759,
            "name": "urlmap-http",
            "path_matcher": [
              {
                "default_route_action": [],
                "default_service": "",
                "default_url_redirect": [
                  {
                    "host_redirect": "",
                    "https_redirect": true,
                    "path_redirect": "",
                    "prefix_redirect": "",
                    "redirect_response_code": "",
                    "strip_query": false
                  }
                ],
                "description": "",
                "header_action": [],
                "name": "all-hosts",
                "path_rule": [],
                "route_rules": []
              }
            ],
            "project": "websites-270319",
            "self_link": "https://www.googleapis.com/compute/v1/projects/websites-270319/global/urlMaps/urlmap-http",
            "test": [],
            "timeouts": null
          },
          "dependencies": [
            "google_compute_backend_bucket.BACKEND_BUCKET"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "URL_MAP_HTTPS",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2021-05-12T01:35:50.188-07:00",
            "default_route_action": [],
            "default_service": "https://www.googleapis.com/compute/v1/projects/websites-270319/global/backendServices/backend-service",
            "default_url_redirect": [],
            "description": "",
            "fingerprint": "UPD3Eb-hkEA=",
            "header_action": [],
            "host_rule": [],
            "id": "projects/websites-270319/global/urlMaps/urlmap-https",
            "map_id": 6121274164674702729,
            "name": "urlmap-https",
            "path_matcher": [],
            "project": "websites-270319",
            "self_link": "https://www.googleapis.com/compute/v1/projects/websites-270319/global/urlMaps/urlmap-https",
            "test": [],
            "timeouts": null
          },
          "dependencies": [
            "google_compute_backend_service.BACKEND_SERVICE",
            "google_compute_health_check.HTTP_CHECK_1"
          ]
        }
      ]
    }
  ]
}